[workspace]
resolver = "2"

members = [
	"bridges/bin/runtime-common",
	"bridges/modules/grandpa",
	"bridges/modules/messages",
	"bridges/modules/parachains",
	"bridges/modules/relayers",
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/proposer",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"client/relay-chain-minimal-node",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/aura",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachain",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/asset-hub-polkadot",
	"parachains/runtimes/assets/asset-hub-kusama",
	"parachains/runtimes/assets/asset-hub-westend",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/glutton/glutton-kusama",
	"parachains/runtimes/testing/penpal",
	"parachains/integration-tests/emulated/common",
	"parachains/integration-tests/emulated/assets/asset-hub-kusama",
	"parachains/integration-tests/emulated/assets/asset-hub-polkadot",
	"parachains/integration-tests/emulated/assets/asset-hub-westend",
	"parachains/integration-tests/emulated/collectives/collectives-polkadot",
	"parachains/integration-tests/emulated/bridges/bridge-hub-rococo",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
	"xcm/xcm-emulator",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/substrate"]
node-template = { path = "/home/sebastian/work/repos/substrate/bin/node-template/node" }
frame-benchmarking = { path = "/home/sebastian/work/repos/substrate/frame/benchmarking" }
frame-support = { path = "/home/sebastian/work/repos/substrate/frame/support" }
frame-support-procedural = { path = "/home/sebastian/work/repos/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/home/sebastian/work/repos/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/home/sebastian/work/repos/substrate/frame/support/procedural/tools/derive" }
sp-api = { path = "/home/sebastian/work/repos/substrate/primitives/api" }
sp-api-proc-macro = { path = "/home/sebastian/work/repos/substrate/primitives/api/proc-macro" }
sp-core = { path = "/home/sebastian/work/repos/substrate/primitives/core" }
sp-core-hashing = { path = "/home/sebastian/work/repos/substrate/primitives/core/hashing" }
sp-debug-derive = { path = "/home/sebastian/work/repos/substrate/primitives/debug-derive" }
sp-externalities = { path = "/home/sebastian/work/repos/substrate/primitives/externalities" }
sp-std = { path = "/home/sebastian/work/repos/substrate/primitives/std" }
sp-storage = { path = "/home/sebastian/work/repos/substrate/primitives/storage" }
sp-runtime-interface = { path = "/home/sebastian/work/repos/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/home/sebastian/work/repos/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/home/sebastian/work/repos/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/home/sebastian/work/repos/substrate/primitives/wasm-interface" }
sp-io = { path = "/home/sebastian/work/repos/substrate/primitives/io" }
sp-keystore = { path = "/home/sebastian/work/repos/substrate/primitives/keystore" }
sp-state-machine = { path = "/home/sebastian/work/repos/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/home/sebastian/work/repos/substrate/primitives/panic-handler" }
sp-trie = { path = "/home/sebastian/work/repos/substrate/primitives/trie" }
sp-runtime = { path = "/home/sebastian/work/repos/substrate/primitives/runtime" }
sp-application-crypto = { path = "/home/sebastian/work/repos/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/home/sebastian/work/repos/substrate/primitives/arithmetic" }
sp-weights = { path = "/home/sebastian/work/repos/substrate/primitives/weights" }
substrate-test-runtime-client = { path = "/home/sebastian/work/repos/substrate/test-utils/runtime/client" }
sc-block-builder = { path = "/home/sebastian/work/repos/substrate/client/block-builder" }
sc-client-api = { path = "/home/sebastian/work/repos/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/home/sebastian/work/repos/substrate/utils/prometheus" }
sc-executor = { path = "/home/sebastian/work/repos/substrate/client/executor" }
sc-executor-common = { path = "/home/sebastian/work/repos/substrate/client/executor/common" }
sc-allocator = { path = "/home/sebastian/work/repos/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/home/sebastian/work/repos/substrate/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/home/sebastian/work/repos/substrate/client/executor/wasmtime" }
sc-runtime-test = { path = "/home/sebastian/work/repos/substrate/client/executor/runtime-test" }
substrate-wasm-builder = { path = "/home/sebastian/work/repos/substrate/utils/wasm-builder" }
sp-version = { path = "/home/sebastian/work/repos/substrate/primitives/version" }
sp-core-hashing-proc-macro = { path = "/home/sebastian/work/repos/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/home/sebastian/work/repos/substrate/primitives/version/proc-macro" }
sc-tracing = { path = "/home/sebastian/work/repos/substrate/client/tracing" }
sc-tracing-proc-macro = { path = "/home/sebastian/work/repos/substrate/client/tracing/proc-macro" }
sp-blockchain = { path = "/home/sebastian/work/repos/substrate/primitives/blockchain" }
sp-consensus = { path = "/home/sebastian/work/repos/substrate/primitives/consensus/common" }
sp-inherents = { path = "/home/sebastian/work/repos/substrate/primitives/inherents" }
sp-test-primitives = { path = "/home/sebastian/work/repos/substrate/primitives/test-primitives" }
sp-database = { path = "/home/sebastian/work/repos/substrate/primitives/database" }
sp-rpc = { path = "/home/sebastian/work/repos/substrate/primitives/rpc" }
substrate-test-runtime = { path = "/home/sebastian/work/repos/substrate/test-utils/runtime" }
frame-executive = { path = "/home/sebastian/work/repos/substrate/frame/executive" }
frame-system = { path = "/home/sebastian/work/repos/substrate/frame/system" }
frame-try-runtime = { path = "/home/sebastian/work/repos/substrate/frame/try-runtime" }
pallet-balances = { path = "/home/sebastian/work/repos/substrate/frame/balances" }
pallet-transaction-payment = { path = "/home/sebastian/work/repos/substrate/frame/transaction-payment" }
frame-system-rpc-runtime-api = { path = "/home/sebastian/work/repos/substrate/frame/system/rpc/runtime-api" }
pallet-babe = { path = "/home/sebastian/work/repos/substrate/frame/babe" }
pallet-authorship = { path = "/home/sebastian/work/repos/substrate/frame/authorship" }
pallet-session = { path = "/home/sebastian/work/repos/substrate/frame/session" }
pallet-timestamp = { path = "/home/sebastian/work/repos/substrate/frame/timestamp" }
sp-timestamp = { path = "/home/sebastian/work/repos/substrate/primitives/timestamp" }
sp-session = { path = "/home/sebastian/work/repos/substrate/primitives/session" }
sp-staking = { path = "/home/sebastian/work/repos/substrate/primitives/staking" }
sp-consensus-babe = { path = "/home/sebastian/work/repos/substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "/home/sebastian/work/repos/substrate/primitives/consensus/slots" }
frame-election-provider-support = { path = "/home/sebastian/work/repos/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/home/sebastian/work/repos/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/home/sebastian/work/repos/substrate/primitives/npos-elections" }
substrate-test-utils = { path = "/home/sebastian/work/repos/substrate/test-utils" }
substrate-test-utils-derive = { path = "/home/sebastian/work/repos/substrate/test-utils/derive" }
sc-service = { path = "/home/sebastian/work/repos/substrate/client/service" }
sc-chain-spec = { path = "/home/sebastian/work/repos/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/home/sebastian/work/repos/substrate/client/chain-spec/derive" }
sc-network = { path = "/home/sebastian/work/repos/substrate/client/network" }
sc-network-common = { path = "/home/sebastian/work/repos/substrate/client/network/common" }
sc-consensus = { path = "/home/sebastian/work/repos/substrate/client/consensus/common" }
sc-utils = { path = "/home/sebastian/work/repos/substrate/client/utils" }
sp-consensus-grandpa = { path = "/home/sebastian/work/repos/substrate/primitives/consensus/grandpa" }
sc-network-light = { path = "/home/sebastian/work/repos/substrate/client/network/light" }
sc-network-sync = { path = "/home/sebastian/work/repos/substrate/client/network/sync" }
fork-tree = { path = "/home/sebastian/work/repos/substrate/utils/fork-tree" }
sc-telemetry = { path = "/home/sebastian/work/repos/substrate/client/telemetry" }
sc-client-db = { path = "/home/sebastian/work/repos/substrate/client/db" }
sc-state-db = { path = "/home/sebastian/work/repos/substrate/client/state-db" }
kitchensink-runtime = { path = "/home/sebastian/work/repos/substrate/bin/node/runtime" }
frame-benchmarking-pallet-pov = { path = "/home/sebastian/work/repos/substrate/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/home/sebastian/work/repos/substrate/frame/system/benchmarking" }
node-primitives = { path = "/home/sebastian/work/repos/substrate/bin/node/primitives" }
pallet-alliance = { path = "/home/sebastian/work/repos/substrate/frame/alliance" }
pallet-collective = { path = "/home/sebastian/work/repos/substrate/frame/collective" }
pallet-identity = { path = "/home/sebastian/work/repos/substrate/frame/identity" }
pallet-asset-conversion = { path = "/home/sebastian/work/repos/substrate/frame/asset-conversion" }
pallet-assets = { path = "/home/sebastian/work/repos/substrate/frame/assets" }
pallet-asset-conversion-tx-payment = { path = "/home/sebastian/work/repos/substrate/frame/transaction-payment/asset-conversion-tx-payment" }
pallet-asset-rate = { path = "/home/sebastian/work/repos/substrate/frame/asset-rate" }
pallet-asset-tx-payment = { path = "/home/sebastian/work/repos/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-authority-discovery = { path = "/home/sebastian/work/repos/substrate/frame/authority-discovery" }
sp-authority-discovery = { path = "/home/sebastian/work/repos/substrate/primitives/authority-discovery" }
pallet-bags-list = { path = "/home/sebastian/work/repos/substrate/frame/bags-list" }
pallet-bounties = { path = "/home/sebastian/work/repos/substrate/frame/bounties" }
pallet-treasury = { path = "/home/sebastian/work/repos/substrate/frame/treasury" }
pallet-utility = { path = "/home/sebastian/work/repos/substrate/frame/utility" }
pallet-root-testing = { path = "/home/sebastian/work/repos/substrate/frame/root-testing" }
pallet-child-bounties = { path = "/home/sebastian/work/repos/substrate/frame/child-bounties" }
pallet-contracts = { path = "/home/sebastian/work/repos/substrate/frame/contracts" }
pallet-contracts-primitives = { path = "/home/sebastian/work/repos/substrate/frame/contracts/primitives" }
pallet-contracts-proc-macro = { path = "/home/sebastian/work/repos/substrate/frame/contracts/proc-macro" }
pallet-insecure-randomness-collective-flip = { path = "/home/sebastian/work/repos/substrate/frame/insecure-randomness-collective-flip" }
pallet-proxy = { path = "/home/sebastian/work/repos/substrate/frame/proxy" }
pallet-conviction-voting = { path = "/home/sebastian/work/repos/substrate/frame/conviction-voting" }
pallet-scheduler = { path = "/home/sebastian/work/repos/substrate/frame/scheduler" }
pallet-preimage = { path = "/home/sebastian/work/repos/substrate/frame/preimage" }
pallet-core-fellowship = { path = "/home/sebastian/work/repos/substrate/frame/core-fellowship" }
pallet-democracy = { path = "/home/sebastian/work/repos/substrate/frame/democracy" }
pallet-election-provider-multi-phase = { path = "/home/sebastian/work/repos/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/home/sebastian/work/repos/substrate/frame/election-provider-support/benchmarking" }
pallet-elections-phragmen = { path = "/home/sebastian/work/repos/substrate/frame/elections-phragmen" }
pallet-fast-unstake = { path = "/home/sebastian/work/repos/substrate/frame/fast-unstake" }
pallet-staking = { path = "/home/sebastian/work/repos/substrate/frame/staking" }
pallet-staking-reward-curve = { path = "/home/sebastian/work/repos/substrate/frame/staking/reward-curve" }
pallet-glutton = { path = "/home/sebastian/work/repos/substrate/frame/glutton" }
pallet-grandpa = { path = "/home/sebastian/work/repos/substrate/frame/grandpa" }
pallet-offences = { path = "/home/sebastian/work/repos/substrate/frame/offences" }
sp-keyring = { path = "/home/sebastian/work/repos/substrate/primitives/keyring" }
pallet-im-online = { path = "/home/sebastian/work/repos/substrate/frame/im-online" }
pallet-indices = { path = "/home/sebastian/work/repos/substrate/frame/indices" }
pallet-lottery = { path = "/home/sebastian/work/repos/substrate/frame/lottery" }
frame-support-test = { path = "/home/sebastian/work/repos/substrate/frame/support/test" }
frame-support-test-pallet = { path = "/home/sebastian/work/repos/substrate/frame/support/test/pallet" }
pallet-membership = { path = "/home/sebastian/work/repos/substrate/frame/membership" }
pallet-message-queue = { path = "/home/sebastian/work/repos/substrate/frame/message-queue" }
pallet-mmr = { path = "/home/sebastian/work/repos/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/home/sebastian/work/repos/substrate/primitives/merkle-mountain-range" }
pallet-multisig = { path = "/home/sebastian/work/repos/substrate/frame/multisig" }
pallet-nft-fractionalization = { path = "/home/sebastian/work/repos/substrate/frame/nft-fractionalization" }
pallet-nfts = { path = "/home/sebastian/work/repos/substrate/frame/nfts" }
pallet-nfts-runtime-api = { path = "/home/sebastian/work/repos/substrate/frame/nfts/runtime-api" }
pallet-nis = { path = "/home/sebastian/work/repos/substrate/frame/nis" }
pallet-nomination-pools = { path = "/home/sebastian/work/repos/substrate/frame/nomination-pools" }
pallet-nomination-pools-benchmarking = { path = "/home/sebastian/work/repos/substrate/frame/nomination-pools/benchmarking" }
pallet-nomination-pools-runtime-api = { path = "/home/sebastian/work/repos/substrate/frame/nomination-pools/runtime-api" }
pallet-offences-benchmarking = { path = "/home/sebastian/work/repos/substrate/frame/offences/benchmarking" }
pallet-ranked-collective = { path = "/home/sebastian/work/repos/substrate/frame/ranked-collective" }
pallet-recovery = { path = "/home/sebastian/work/repos/substrate/frame/recovery" }
pallet-referenda = { path = "/home/sebastian/work/repos/substrate/frame/referenda" }
pallet-remark = { path = "/home/sebastian/work/repos/substrate/frame/remark" }
pallet-salary = { path = "/home/sebastian/work/repos/substrate/frame/salary" }
pallet-session-benchmarking = { path = "/home/sebastian/work/repos/substrate/frame/session/benchmarking" }
pallet-society = { path = "/home/sebastian/work/repos/substrate/frame/society" }
pallet-staking-runtime-api = { path = "/home/sebastian/work/repos/substrate/frame/staking/runtime-api" }
pallet-state-trie-migration = { path = "/home/sebastian/work/repos/substrate/frame/state-trie-migration" }
frame-remote-externalities = { path = "/home/sebastian/work/repos/substrate/utils/frame/remote-externalities" }
substrate-rpc-client = { path = "/home/sebastian/work/repos/substrate/utils/frame/rpc/client" }
sc-rpc-api = { path = "/home/sebastian/work/repos/substrate/client/rpc-api" }
sc-transaction-pool-api = { path = "/home/sebastian/work/repos/substrate/client/transaction-pool/api" }
substrate-state-trie-migration-rpc = { path = "/home/sebastian/work/repos/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-statement = { path = "/home/sebastian/work/repos/substrate/frame/statement" }
sp-statement-store = { path = "/home/sebastian/work/repos/substrate/primitives/statement-store" }
pallet-sudo = { path = "/home/sebastian/work/repos/substrate/frame/sudo" }
pallet-tips = { path = "/home/sebastian/work/repos/substrate/frame/tips" }
pallet-transaction-payment-rpc-runtime-api = { path = "/home/sebastian/work/repos/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-storage = { path = "/home/sebastian/work/repos/substrate/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/home/sebastian/work/repos/substrate/primitives/transaction-storage-proof" }
pallet-uniques = { path = "/home/sebastian/work/repos/substrate/frame/uniques" }
pallet-vesting = { path = "/home/sebastian/work/repos/substrate/frame/vesting" }
pallet-whitelist = { path = "/home/sebastian/work/repos/substrate/frame/whitelist" }
sp-block-builder = { path = "/home/sebastian/work/repos/substrate/primitives/block-builder" }
sp-offchain = { path = "/home/sebastian/work/repos/substrate/primitives/offchain" }
sp-transaction-pool = { path = "/home/sebastian/work/repos/substrate/primitives/transaction-pool" }
sc-informant = { path = "/home/sebastian/work/repos/substrate/client/informant" }
sc-keystore = { path = "/home/sebastian/work/repos/substrate/client/keystore" }
sc-network-bitswap = { path = "/home/sebastian/work/repos/substrate/client/network/bitswap" }
sc-network-transactions = { path = "/home/sebastian/work/repos/substrate/client/network/transactions" }
sc-rpc = { path = "/home/sebastian/work/repos/substrate/client/rpc" }
sc-transaction-pool = { path = "/home/sebastian/work/repos/substrate/client/transaction-pool" }
substrate-test-runtime-transaction-pool = { path = "/home/sebastian/work/repos/substrate/test-utils/runtime/transaction-pool" }
sc-rpc-server = { path = "/home/sebastian/work/repos/substrate/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/home/sebastian/work/repos/substrate/client/rpc-spec-v2" }
sc-sysinfo = { path = "/home/sebastian/work/repos/substrate/client/sysinfo" }
sp-consensus-aura = { path = "/home/sebastian/work/repos/substrate/primitives/consensus/aura" }
sp-genesis-builder = { path = "/home/sebastian/work/repos/substrate/primitives/genesis-builder" }
substrate-test-client = { path = "/home/sebastian/work/repos/substrate/test-utils/client" }
sc-offchain = { path = "/home/sebastian/work/repos/substrate/client/offchain" }
sp-runtime-interface-test-wasm = { path = "/home/sebastian/work/repos/substrate/primitives/runtime-interface/test-wasm" }
sp-metadata-ir = { path = "/home/sebastian/work/repos/substrate/primitives/metadata-ir" }
frame-benchmarking-cli = { path = "/home/sebastian/work/repos/substrate/utils/frame/benchmarking-cli" }
sc-cli = { path = "/home/sebastian/work/repos/substrate/client/cli" }
node-template-runtime = { path = "/home/sebastian/work/repos/substrate/bin/node-template/runtime" }
pallet-aura = { path = "/home/sebastian/work/repos/substrate/frame/aura" }
pallet-template = { path = "/home/sebastian/work/repos/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc = { path = "/home/sebastian/work/repos/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = "/home/sebastian/work/repos/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/home/sebastian/work/repos/substrate/client/proposer-metrics" }
sc-consensus-aura = { path = "/home/sebastian/work/repos/substrate/client/consensus/aura" }
sc-consensus-slots = { path = "/home/sebastian/work/repos/substrate/client/consensus/slots" }
sc-network-test = { path = "/home/sebastian/work/repos/substrate/client/network/test" }
sc-consensus-grandpa = { path = "/home/sebastian/work/repos/substrate/client/consensus/grandpa" }
sc-network-gossip = { path = "/home/sebastian/work/repos/substrate/client/network-gossip" }
substrate-frame-rpc-system = { path = "/home/sebastian/work/repos/substrate/utils/frame/rpc/system" }
try-runtime-cli = { path = "/home/sebastian/work/repos/substrate/utils/frame/try-runtime/cli" }
substrate-cli-test-utils = { path = "/home/sebastian/work/repos/substrate/test-utils/cli" }
substrate-build-script-utils = { path = "/home/sebastian/work/repos/substrate/utils/build-script-utils" }
node-bench = { path = "/home/sebastian/work/repos/substrate/bin/node/bench" }
node-testing = { path = "/home/sebastian/work/repos/substrate/bin/node/testing" }
node-executor = { path = "/home/sebastian/work/repos/substrate/bin/node/executor" }
node-cli = { path = "/home/sebastian/work/repos/substrate/bin/node/cli" }
node-inspect = { path = "/home/sebastian/work/repos/substrate/bin/node/inspect" }
node-rpc = { path = "/home/sebastian/work/repos/substrate/bin/node/rpc" }
mmr-rpc = { path = "/home/sebastian/work/repos/substrate/client/merkle-mountain-range/rpc" }
sc-consensus-babe = { path = "/home/sebastian/work/repos/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/home/sebastian/work/repos/substrate/client/consensus/epochs" }
sc-consensus-babe-rpc = { path = "/home/sebastian/work/repos/substrate/client/consensus/babe/rpc" }
sc-consensus-grandpa-rpc = { path = "/home/sebastian/work/repos/substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/home/sebastian/work/repos/substrate/client/sync-state-rpc" }
sc-authority-discovery = { path = "/home/sebastian/work/repos/substrate/client/authority-discovery" }
sc-network-statement = { path = "/home/sebastian/work/repos/substrate/client/network/statement" }
sc-statement-store = { path = "/home/sebastian/work/repos/substrate/client/statement-store" }
sc-storage-monitor = { path = "/home/sebastian/work/repos/substrate/client/storage-monitor" }
sc-service-test = { path = "/home/sebastian/work/repos/substrate/client/service/test" }
substrate-frame-cli = { path = "/home/sebastian/work/repos/substrate/utils/frame/frame-utilities-cli" }
chain-spec-builder = { path = "/home/sebastian/work/repos/substrate/bin/utils/chain-spec-builder" }
subkey = { path = "/home/sebastian/work/repos/substrate/bin/utils/subkey" }
sc-consensus-beefy = { path = "/home/sebastian/work/repos/substrate/client/consensus/beefy" }
sp-consensus-beefy = { path = "/home/sebastian/work/repos/substrate/primitives/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/home/sebastian/work/repos/substrate/client/consensus/beefy/rpc" }
sc-consensus-manual-seal = { path = "/home/sebastian/work/repos/substrate/client/consensus/manual-seal" }
sc-consensus-pow = { path = "/home/sebastian/work/repos/substrate/client/consensus/pow" }
sp-consensus-pow = { path = "/home/sebastian/work/repos/substrate/primitives/consensus/pow" }
mmr-gadget = { path = "/home/sebastian/work/repos/substrate/client/merkle-mountain-range" }
pallet-atomic-swap = { path = "/home/sebastian/work/repos/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer = { path = "/home/sebastian/work/repos/substrate/frame/bags-list/fuzzer" }
pallet-bags-list-remote-tests = { path = "/home/sebastian/work/repos/substrate/frame/bags-list/remote-tests" }
pallet-beefy = { path = "/home/sebastian/work/repos/substrate/frame/beefy" }
pallet-beefy-mmr = { path = "/home/sebastian/work/repos/substrate/frame/beefy-mmr" }
binary-merkle-tree = { path = "/home/sebastian/work/repos/substrate/utils/binary-merkle-tree" }
pallet-election-provider-e2e-test = { path = "/home/sebastian/work/repos/substrate/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/home/sebastian/work/repos/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-examples = { path = "/home/sebastian/work/repos/substrate/frame/examples" }
pallet-default-config-example = { path = "/home/sebastian/work/repos/substrate/frame/examples/default-config" }
pallet-dev-mode = { path = "/home/sebastian/work/repos/substrate/frame/examples/dev-mode" }
pallet-example-basic = { path = "/home/sebastian/work/repos/substrate/frame/examples/basic" }
pallet-example-kitchensink = { path = "/home/sebastian/work/repos/substrate/frame/examples/kitchensink" }
pallet-example-offchain-worker = { path = "/home/sebastian/work/repos/substrate/frame/examples/offchain-worker" }
pallet-example-split = { path = "/home/sebastian/work/repos/substrate/frame/examples/split" }
pallet-nicks = { path = "/home/sebastian/work/repos/substrate/frame/nicks" }
pallet-node-authorization = { path = "/home/sebastian/work/repos/substrate/frame/node-authorization" }
pallet-nomination-pools-fuzzer = { path = "/home/sebastian/work/repos/substrate/frame/nomination-pools/fuzzer" }
pallet-nomination-pools-test-staking = { path = "/home/sebastian/work/repos/substrate/frame/nomination-pools/test-staking" }
pallet-paged-list = { path = "/home/sebastian/work/repos/substrate/frame/paged-list" }
pallet-paged-list-fuzzer = { path = "/home/sebastian/work/repos/substrate/frame/paged-list/fuzzer" }
pallet-scored-pool = { path = "/home/sebastian/work/repos/substrate/frame/scored-pool" }
pallet-staking-reward-fn = { path = "/home/sebastian/work/repos/substrate/frame/staking/reward-fn" }
pallet-root-offences = { path = "/home/sebastian/work/repos/substrate/frame/root-offences" }
frame-support-test-compile-pass = { path = "/home/sebastian/work/repos/substrate/frame/support/test/compile_pass" }
sp-api-test = { path = "/home/sebastian/work/repos/substrate/primitives/api/test" }
sp-application-crypto-test = { path = "/home/sebastian/work/repos/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/home/sebastian/work/repos/substrate/primitives/arithmetic/fuzzer" }
sp-crypto-ec-utils = { path = "/home/sebastian/work/repos/substrate/primitives/crypto/ec-utils" }
sp-npos-elections-fuzzer = { path = "/home/sebastian/work/repos/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/home/sebastian/work/repos/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/home/sebastian/work/repos/substrate/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/home/sebastian/work/repos/substrate/scripts/ci/node-template-release" }
substrate-test-utils-test-crate = { path = "/home/sebastian/work/repos/substrate/test-utils/test-crate" }
substrate-frame-rpc-support = { path = "/home/sebastian/work/repos/substrate/utils/frame/rpc/support" }
generate-bags = { path = "/home/sebastian/work/repos/substrate/utils/frame/generate-bags" }
node-runtime-generate-bags = { path = "/home/sebastian/work/repos/substrate/utils/frame/generate-bags/node-runtime" }
substrate = { path = "/home/sebastian/work/repos/substrate" }
