[package]
name = "cumulus-client-clawback"
version = "0.0.1"
authors = [ "Sebastian Kunert <sebastian@Sebastians-MBP>" ]

[dependencies]
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
tracing = { version = "0.1.37", default-features = false }

[features]
default = ["std"]
std = [
	"sp-runtime-interface/std",
	"sp-externalities/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-api/std",
	"sp-trie/std",
	"sp-core/std",
	"tracing/std"
]
